Code cleanup with IDE tips
Former-commit-id: 19fea26f46603957db50df3199d5c595811654ed
Former-commit-id: 0c56037f202ecde20a72c26460a3d4a87e79fb14